# dataforge-ai

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: backend.yml  dataforge.yml
backend/: dataforge  pyproject.toml  ruff.toml
backend/app/: cli.py  main.py
backend/app/ai/: base.py  openai_provider.py  prompts.py  service.py
backend/app/api/: git.py  impact.py  routes.py  scan.py  sql.py
backend/app/core/: config.py
backend/app/git/: __init__.py  analyzer.py  models.py  service.py
backend/app/impact/: __init__.py  analyzer.py  models.py  service.py
backend/app/reporting/: __init__.py  formatter.py
backend/app/scanner/: __init__.py  dbt.py  lineage.py  models.py  parser.py  service.py
backend/app/schemas/: git.py  impact.py  scan.py
backend/app/tests/: test_cli.py  test_demo_fixtures.py  test_git_change.py  test_health.py  test_impact.py  test_reporting.py  test_scan.py  test_scan_risks.py  test_workflow.py
backend/demo/: DEMO_OUTPUT.md  README.md  demo.py  run_demo.sh
examples/breaking_change/: orders_after.sql  orders_before.sql
examples/demo_dbt_project/: dbt_project.yml
examples/demo_dbt_project/models/: customers.sql  orders.sql  revenue.sql
